--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -9,22 +9,16 @@
             Padding="30,0"
             VerticalOptions="Center">
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
-
             <Label
-                Text="Hello, World!"
+                Text="Youtube Downloader"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
 
             <Label
-                Text="Welcome to .NET Multi-platform App UI"
+                Text="The best Youtube Downloader in UTS"
                 SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
+                SemanticProperties.Description="The best Youtube Downloader in UTS"
                 FontSize="18"
                 HorizontalOptions="Center" />
 
@@ -39,4 +33,3 @@
     </ScrollView>
 
 </ContentPage>
-
