--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -2,34 +2,27 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="YoutubeDownloader.MainPage">
-
     <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+        <HorizontalStackLayout>
+            <VerticalStackLayout Spacing="10" Padding="30, 20">
+                <Label
+                    Text="Youtube Downloader"
+                    SemanticProperties.HeadingLevel="Level1"
+                    FontSize="32"/>
 
-            <Label
-                Text="Youtube Downloader"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
+                <Label
+                    Text="The best Youtube Downloader in UTS"
+                    SemanticProperties.HeadingLevel="Level2"
+                    SemanticProperties.Description="The best Youtube Downloader in UTS"
+                    FontSize="18"/>
 
-            <Label
-                Text="The best Youtube Downloader in UTS"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="The best Youtube Downloader in UTS"
-                FontSize="18"
-                HorizontalOptions="Center" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
-
-        </VerticalStackLayout>
+                <Button
+                    x:Name="CounterBtn"
+                    Text="Click me"
+                    SemanticProperties.Hint="Counts the number of times you click"
+                    Clicked="OnCounterClicked"
+                    HorizontalOptions="Start"/>
+            </VerticalStackLayout>
+        </HorizontalStackLayout>
     </ScrollView>
-
 </ContentPage>
